2008-02-08  Miklos Szeredi <miklos@szeredi.hu>

	* Block SIGCHLD when executing mount and umount

	* fusexmp_fh: avoid unnecessary seeking in readdir

	* Update kernel interface to 7.9:

	* Support receiving file handle from kernel in GETATTR request

	* Allow operations with a NULL path argument, if the filesystem
	supports it

	* Add support atomic open(O_TRUNC)

	* Support the st_blksize field in struct stat

	* If the "FUSE_THREAD_STACK" environment is set, initialize the
	stack size of threads by this value.  Patch by Florin Malita

	* Add per-node locking, instead of a global tree lock to protect
	the path from changing during operations.  Original patch by
	Rodrigo Castro

2008-02-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- string formatting fixes
	- exit if mounting has failed
	  (in FreeBSD a mount failure is not critical per se, as the daemon
	  still could be mounted externally, but waiting for such an event
	  is more confusing than fruitful)
	- ditch the kvm(8) stuff and simply use forced unmount which just
	  won't block
	- prettify option specifications
	- add "-onosync_unmount" kernel option

2008-01-07  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c:
	- refine device closing in a race-free way
	- add support for "-osubtype" on FreeBSD

	* makeconf.sh: make it work under FreeBSD

2008-01-03  Csaba Henk <csaba.henk@creo.hu>

	* lib/mount_bsd.c: close device before unmount
	(cf. lib/mount.c rev. 1.43) and fix some warnings 

2007-12-23  Miklos Szeredi <miklos@szeredi.hu>

	* Fix './configure --disable-static'.  Patch from Ismail Dönmez

2007-12-17  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.7.2

2007-12-12  Miklos Szeredi <miklos@szeredi.hu>

	* Fix kernel module compile for 2.6.24

	* Invalidate attributes of parent directory after create(), since
	the modification time changes.  Invalidate attributes on rename,
	since some filesystems may update st_ctime.  Reported by Szabolcs
	Szakacsits
